@@ -1,0 +1,3 @@
+This example application is currently under development but it's
+functional although you can't select a profile other than the first and
+the code to handle the images hasn't been written yet - 20121205.
