@@ -1,6 +1,11 @@
 Please see NEWS for a summary of changes since the last release suitable
 for announcements.
 
+* Wed Dec 5 2012 Thunor <thunorsif@hotmail.com>
+- Applied any existing use-markup="true" tag attributes to text widgets
+  on widget creation to prevent visible resizing when being shown.
+- Started to change all "$(...)" to "`...`" within the examples.
+
 * Sat Dec 1 2012 Thunor <thunorsif@hotmail.com>
 - Added examples/miscellaneous/conditional_actions.
 
